# tg18ai

./: .gitmodules  CMakeLists.txt  README.md  gamewindow.cpp  gamewindow.h  main.cpp  player.cpp  player.h  polygonnode.cpp  polygonnode.h  tgai18.pro
examples/: rand0m.py
